--- a/package.json
+++ b/package.json
@@ -15,16 +15,20 @@
   },
   "dependencies": {
     "@nuxt/eslint": "^1.9.0",
+    "@nuxt/icon": "^2.0.0",
+    "@tailwindcss/vite": "^4.1.13",
     "eslint": "^9.35.0",
     "nuxt": "^4.1.2",
+    "tailwindcss": "^4.1.13",
     "vue": "^3.5.21",
     "vue-router": "^4.5.1"
   },
   "devDependencies": {
+    "@iconify-json/tabler": "^1.2.23",
+    "daisyui": "^5.1.13",
     "husky": "^9.1.7",
     "lint-staged": "^16.1.6"
   },
-
   "lint-staged": {
     "*.{js,ts,vue}": [
       "eslint --fix",
